[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "ak-HIDS"
version = "1.0.0"
description = "create own host-based intrusion detection system."
authors = [
    {name = "Aakash patil", email = "akakashpatil7777@gmail.com"}
]
license = "MIL"
readme = "README.md"
keywords = ["hids", "security", "hashlookup", "integrity"]

dynamic = ["classifiers"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "rsa (>=4.9)",
    "pyhashlookup (>=1.2.6)",
    "pypandora (>=1.9.2)",
    "pymisp (>=2.5.4)",
    "yara-python (>=4.5.1)",
    "flor (>=1.1.3)",
    "scalable-cuckoo-filter (>=1.1)",
]


[project.urls]
Homepage = "https://github.com/Akashpatil47/ak.hids#"
Repository = "https://github.com/Akashpatil47/ak.hids#"
Changelog = "https://github.com/Akashpatil47/ak.hids/blob/master/NEWS.md"


[project.scripts]
pyhids = "bin.main:main"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
include = [
    "README.md",
    "NEWS.md",
    "COPYING",
    "conf.py",
    "bin/*",
]


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pip-audit = "^2.7.3"


[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"
